<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_htu"
        android:icon="@drawable/ic_nav_htu"
        android:title="@string/action_htu" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/action_settings" />

    <item
        android:id="@+id/action_feedback"
        android:icon="@drawable/ic_nav_feedback"
        android:title="@string/action_feedback" />

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_nav_about"
        android:title="@string/action_about" />

    <item
        android:id="@+id/action_dark_switch"
        android:icon="@drawable/ic_nav_theme"
        android:title="@string/action_dark_mode"
        />
</menu>