<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activities_fragments_bg_color"
    tools:context=".Fragments.NavigationFragments.AboutFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="6dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_icon"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                style="@style/AboutTextViews"
                android:text="@string/text_about_head_description"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                style="@style/AboutTextViews"
                android:justificationMode="inter_word"
                android:text="@string/text_about_description" />

            <TextView
                style="@style/AboutTextViews"
                android:text="@string/text_about_head_features"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                style="@style/AboutTextViews"
                android:justificationMode="inter_word"
                android:text="@string/text_about_feature1" />

            <TextView
                style="@style/AboutTextViews"
                android:justificationMode="inter_word"
                android:text="@string/text_about_feature2" />


            <TextView
                style="@style/AboutTextViews"
                android:justificationMode="inter_word"
                android:text="@string/text_about_feature3" />

            <TextView
                style="@style/AboutTextViews"
                android:justificationMode="inter_word"
                android:text="@string/text_about_feature4" />


            <TextView
                style="@style/AboutTextViews"
                android:justificationMode="inter_word"
                android:text="@string/text_about_feature5" />

            <TextView
                style="@style/AboutTextViews"
                android:justificationMode="inter_word"
                android:text="@string/text_about_feature6" />

            <TextView
                style="@style/AboutTextViews"
                android:text="@string/text_about_feature7" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="6dp"
                android:background="@color/icon_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/AboutTnc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/TOS" />

                <TextView
                    android:id="@+id/AboutPP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/PP" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>