<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/num_pad_bg_color"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/EditNumpad1"
            style="@style/EditMatrixFragMaterialButtons"
            android:text="@string/numpad1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/EditNumpad4"
            style="@style/EditMatrixFragMaterialButtons"
            android:text="@string/numpad4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/EditNumpad7"
            style="@style/EditMatrixFragMaterialButtons"
            android:text="@string/numpad7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/EditNumpadDot"
            style="@style/EditMatrixFragMaterialButtons"
            android:text="@string/numpadDot" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/EditNumpad2"
            style="@style/EditMatrixFragMaterialButtons"
            android:text="@string/numpad2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/EditNumpad5"
            style="@style/EditMatrixFragMaterialButtons"
            android:text="@string/numpad5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/EditNumpad8"
            style="@style/EditMatrixFragMaterialButtons"
            android:text="@string/numpad8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/EditNumpad0"
            style="@style/EditMatrixFragMaterialButtons"
            android:text="@string/numpad0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/EditNumpad3"
            style="@style/EditMatrixFragMaterialButtons"
            android:text="@string/numpad3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/EditNumpad6"
            style="@style/EditMatrixFragMaterialButtons"
            android:text="@string/numpad6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/EditNumpad9"
            style="@style/EditMatrixFragMaterialButtons"
            android:text="@string/numpad9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/EditNumpadMinus"
            style="@style/EditMatrixFragMaterialButtons"
            android:text="@string/numpadMinus" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewUp"
            style="@style/EditMatrixFragNumpadCardViews"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout13"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="4dp">

            <ImageView
                android:id="@+id/EditNumpadUp"
                style="@style/EditMatrixFragNumpadImageBtns"
                android:contentDescription="@string/desc_edit_keyboard_focus_up"
                android:src="@drawable/ic_mat_edit_up" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout13"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/cardViewDown"
            app:layout_constraintHeight_percent=".25"
            app:layout_constraintTop_toBottomOf="@+id/cardViewUp"
            tools:ignore="NestedWeights"
            tools:layout_editor_absoluteX="0dp">

            <androidx.cardview.widget.CardView
                style="@style/EditMatrixFragNumpadCardViews"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/EditNumpadLeft"
                    style="@style/EditMatrixFragNumpadImageBtns"
                    android:contentDescription="@string/desc_edit_keyboard_focus_left"
                    android:src="@drawable/ic_mat_edit_left" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/EditMatrixFragNumpadCardViews"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/EditNumpadRight"
                    style="@style/EditMatrixFragNumpadImageBtns"
                    android:contentDescription="@string/desc_edit_keyboard_focus_right"
                    android:src="@drawable/ic_mat_edit_right" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewDown"
            style="@style/EditMatrixFragNumpadCardViews"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/cardViewBackSpace"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout13">

            <ImageView
                android:id="@+id/EditNumpadDown"
                style="@style/EditMatrixFragNumpadImageBtns"
                android:contentDescription="@string/desc_edit_keyboard_focus_down"
                android:src="@drawable/ic_mat_edit_down" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewBackSpace"
            style="@style/EditMatrixFragNumpadCardViews"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewDown">

            <ImageView
                android:id="@+id/EditNumpadBackSpace"
                style="@style/EditMatrixFragNumpadImageBtns"
                android:contentDescription="@string/desc_keyboard_backspace"
                android:padding="10dp"
                android:src="@drawable/ic_mat_edit_backspace" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>