<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activities_fragments_bg_color"
    tools:context=".Fragments.NavigationFragments.FeedbackFragment">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:checkedButton="@id/ReportBug"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/ReportBug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_report_bug" />

        <RadioButton
            android:id="@+id/RequestFeature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_request_feature" />
    </RadioGroup>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/FeedbackLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:hint="@string/hint_feedback"
        android:textColorHint="@color/mtrl_textinput_default_box_stroke_color"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
        app:errorEnabled="true"
        app:hintTextColor="@color/mtrl_textinput_default_box_stroke_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/FeedbackField"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:textColor="@color/mtrl_textinput_default_box_stroke_color" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/FeedbackDivider1"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_margin="8dp"
        android:background="@color/custom_accent_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/FeedbackDividerText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FeedbackLayout"
        app:layout_constraintVertical_bias="0.4" />

    <TextView

        android:id="@+id/FeedbackDividerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_OR"
        android:textColor="@color/dark_compatible_text_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/FeedbackDivider1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/FeedbackDivider1" />

    <View
        android:id="@+id/FeedbackDivider2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_margin="8dp"
        android:background="@color/custom_accent_color"
        app:layout_constraintBottom_toBottomOf="@+id/FeedbackDividerText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/FeedbackDividerText"
        app:layout_constraintTop_toTopOf="@+id/FeedbackDividerText" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_join_telegram"
        android:textColor="@color/dark_compatible_text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FeedbackDividerText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/FeedbackJoinButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue_black"
        android:text="@string/text_join"
        android:textColor="@color/persistent_white_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>