<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.NavigationActivity">

    <ImageView
        android:id="@+id/NavigationActivityBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/desc_back"
        android:focusable="true"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/NavHeaderIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/NavigationActivityBack"
        app:layout_constraintStart_toEndOf="@+id/NavigationActivityBack"
        app:layout_constraintTop_toTopOf="@+id/NavigationActivityBack"
        app:srcCompat="@drawable/ic_nav_settings"
        android:contentDescription="@string/action_settings" />

    <TextView
        android:id="@+id/NavHeaderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/NavHeaderIcon"
        app:layout_constraintStart_toEndOf="@+id/NavHeaderIcon"
        app:layout_constraintTop_toTopOf="@+id/NavHeaderIcon" />

    <ImageView
        android:id="@+id/NavigationActivitySave"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/desc_save"
        android:focusable="true"
        android:src="@drawable/ic_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/NavigationFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NavigationActivityBack" />

</androidx.constraintlayout.widget.ConstraintLayout>